fixed header gap, changed theme (font, logo, colors)

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400&display=swap');
+
 body {
   padding-top: 54px;
   overflow-x: hidden;
@@ -21,10 +23,27 @@ footer{
   text-align: justify;
 }
 
+/* font */
+
+p {
+  font-family: "Roboto";
+}
+
 /* NAV */
 
 .bg-dark-blue{
   background-color: #2c3e50;
+}
+
+.bg-gradient{
+  background: rgb(252,70,107);
+  background: linear-gradient(75deg, rgba(252,70,107,1) 0%, rgba(255,47,163,1) 100%);
+}
+
+.navbar{
+  padding-top: 9.5px;
+  padding-bottom: 9.5px;
+  font-family: "Roboto";
 }
 
 /* ANCHOR CORRECTION */
@@ -40,8 +59,7 @@ h3,
 h4,
 h5,
 h6 {
-  text-transform: uppercase;
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Roboto",Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: 700;
 }
 
@@ -65,7 +83,8 @@ h1{
 header {
   text-align: center;
   color: #fff;
-  background: #18bc9c;
+  background-image: linear-gradient(105deg, #48c6ef 0%, #6f86d6 100%);
+  /*background: #18bc9c;*/
 }
 
 canvas{
@@ -85,15 +104,16 @@ header img {
 
 header .intro-text .name {
   display: block;
-  text-transform: uppercase;
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Roboto";
+  font-style: italic;
   font-size: 2em;
-  font-weight: 700;
+  font-weight: 400;
 }
 
 header .intro-text .skills {
   font-size: 1.25em;
-  font-weight: 300;
+  font-weight: 100;
+  font-family: "Roboto";
 }
 
 @media(min-width:768px) {
@@ -251,6 +271,7 @@ hr.star-primary:after {
   text-align: center;
   font-style: italic;
   font-size: small;
+  font-family: "Roboto";
 }
 
 @media(min-width:1000px) {
@@ -262,6 +283,7 @@ hr.star-primary:after {
 /* FOOTER */
 footer {
   color: #fff;
+  font-family: "Roboto";
 }
 
 footer h3 {
